header spacing fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,7 +38,6 @@ header {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-end;
-  flex-basis: 50%;
 }
 
 nav {
